<resources>
    <string name="app_name">TareaDavid</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_correo">Campo para ingresar su correo</string>
    <string name="msg_clave">Campo para ingresar su contrasena</string>
    <string name="msg_brLogin">Boton para hacer login</string>
    <string name="msg_brRegister">Boton para registrarse en el app</string>
    <string name="msg_fallo_registro">Fallo el registro del usuario</string>
    <string name="msg_fallo_login">Fallo el login del usuario</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="msg_nombre">Nombre del Restaurante</string>
    <string name="msg_resena">Calificación del Restaurante de 1 a 10</string>
    <string name="msg_telefono_add">Telefono del Restaurante</string>
    <string name="msg_web_add">Sitio web del Restaurante</string>
    <string name="msg_resena_add">Restaurante agregado</string>
    <string name="msg_resena_update">Restaurante actualizado</string>
    <string name="msg_resena_delete">Restaurante eliminado</string>
    <string name="bt_add_resena">Agregar Restaurante </string>
    <string name="bt_update_resena">Actualizar Restaurante </string>
    <string name="menu_delete">Eliminar Restaurante </string>
    <string name="msg_seguroBorrar">"¿Estàs seguro de eliminar  "</string>
    <string name="no">No</string>
    <string name="si">Si</string>
</resources>